
- Fixed MapScript getExpressionString() that was failing on expressions
  longer that 256 chars (SWIG) and 512 chars (PHP). (bug 1428)

- [WMSSLD] use Title of Rule if Name not present (bug 1889)

- Fixed syntax error (for visual c++) in mapimagemap.c. 

- Fixed mapgeos.c problems with multipoint and multilinestring WKT (bug 1897).


Version 4.10.0-beta2 (2006-08-28)
---------------------------------

- Applied patch supplied by Vilson Farias for extra commas with imagemap
  output (bug 760).

- Fixed possible heap overflow with oversized POST requests (bug 1885)

- Set ./lib and ./include properly for MING support (bug 1866)

- More robust library checking on OSX (bug 1867)

- Removed mpatrol support (use valgrind instead for something 
  similar and less intrusive).  (bug 1883)

- Added mapserver compilation flags to the SWIG c# command line (bug 1881)

- Fix OSX shared library options for PHP (bug 1877).

- Added setSymbolByName to styleObj for the SWIG mapscript in order to 
  set both the symbol and the symbolname members (bug 1835)

- Generate ogc filters now outputs the ocg name space (bug 1863)

- Don't return a WCS ref in WMS DescribeLayer responses when layer type is
  CONNECTIONTYPE WMS (cascaded WMS layers not supported for WCS) (bug 1874)

- Correct partly the problem of translating regex to ogc:Literal (bug 1644)

- schemas.opengeospatial.net has been shutdown, use schemas.opengis.net 
  instead as the default schema repository for OGC services (bug 1873)

- MIGRATION_GUIDE.TXT has been created to document backwards incompatible
  changes between 4.8 and 4.10

- Modify mapgd.c to use MS_NINT_GENERIC to avoid rounding issues. (bug 1716)

- added --disable-fast-nint configure directive (bug 1716)

- Fixed php_mapscript Windows build that was broken in beta1 (bug 1872)

- Supported <propertyname> tag in SLD label (Bug 1857)

- Use the label element in the ColorMapEntry for the raster symbolizer
  (Bug 1844)
